--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarse</title>
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'register.css' %}"> <!-- Archivo CSS dedicado para el registro -->
 </head>
 <body>
-    <h2>Registro de Usuario</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrarse</button>
-    </form>
+    <div class="container">
+        <!-- Sección izquierda con una imagen -->
+        <div class="left-section">
+            <img src="{% static 'img/9343597.jpg' %}" alt="Ilustración" class="illustration">
+        </div>
+
+        <!-- Sección derecha con el formulario de registro -->
+        <div class="right-section">
+            <div class="form-container">
+                <h2>Registrarse</h2>
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn">Crear Cuenta</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>© 2024 GoyoBurger - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
