--- a/app/static/carrito.css
+++ b/app/static/carrito.css
@@ -1,81 +1,23 @@
-/* Estilo para la página del carrito */
-
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f9f9f9;
-    color: #333;
-    margin: 0;
-    padding: 0;
-}
-
-h1 {
-    text-align: center;
-    color: #333;
-    margin: 20px 0;
-}
-
-.carrito-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+button {
+    background-color: #ffc107;
+    color: #000;
+    padding: 12px 25px;
+    font-size: 16px;
+    border: none;
     border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
 }
 
-.ingredientes-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.ingrediente-item {
+.button-group {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
-    border-bottom: 1px solid #e0e0e0;
-    font-size: 16px;
+    gap: 20px; /* Añade espacio entre los botones */
+    width: 100%;
 }
 
-.ingrediente-item:last-child {
-    border-bottom: none;
+button:hover {
+    background-color: #ffca2c;
 }
 
-.ingrediente-item span {
-    font-weight: bold;
-    color: #555;
-}
-
-.total-pedido {
-    text-align: right;
-    font-size: 18px;
-    font-weight: bold;
-    margin-top: 20px;
-    color: #555;
-}
-
-.btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #ffcc00;
-    color: #333;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 4px;
-    font-weight: bold;
-    margin-top: 20px;
-}
-
-.btn:hover {
-    background-color: #ffdd33;
-    color: #222;
-}
-
-footer {
-    text-align: center;
-    margin-top: 50px;
-    padding: 20px;
-    background-color: #333;
-    color: white;
-    font-size: 14px;
-}
