--- a/app/static/ingredientes.css
+++ b/app/static/ingredientes.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    background: #dfd996; /* Fondo blanco */
+    background: #ffffff; /* Fondo blanco */
     margin: 0;
     padding: 0;
     display: flex;
