--- a/app/templates/generar-reset-code.html
+++ b/app/templates/generar-reset-code.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Generar reset code</title>
     <link rel="stylesheet" href="{% static 'register.css' %}"> <!-- Reutilizamos el CSS de registro -->
 </head>
 <body>
@@ -17,12 +17,11 @@
         <!-- Sección derecha con el formulario de inicio de sesión -->
         <div class="right-section">
             <div class="form-container">
-                <h2>Iniciar Sesión</h2>
+                <h2>Recuperación de contraseña</h2>
                 <form method="POST">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <li><a href="{% url 'generar-reset-code' %}" style="text-decoration: none"> Recuperar contraseña</a></li>
-                    <button type="submit" class="btn">Ingresar</button>
+                    <button type="submit" class="btn">Enviar codigo de recuperación</button>
                 </form>
             </div>
         </div>
