arreglo bug seleccion de 0 ingredientes

--- a/app/templates/carrito.html
+++ b/app/templates/carrito.html
@@ -26,6 +26,7 @@
         <div class="buttons">
             <a href="{% url 'ingredientes' %}" class="btn">Seguir comprando</a>
             <a href="{% url 'home' %}" class="btn">Volver al inicio</a>
+            <a href="{% url 'generar-boleta' %}" class="btn">Descargar Boleta</a>
         </div>
 
         {% if messages %}
@@ -38,3 +39,4 @@
     </div>
 </body>
 </html>
+
