--- a/app/static/carrito.css
+++ b/app/static/carrito.css
@@ -20,7 +20,7 @@ body {
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 50px;
     color: #333;
     margin-bottom: 20px;
 }
@@ -51,7 +51,8 @@ h1 {
 }
 
 .ingrediente-precio {
-    color: #777;
+    font-weight: 500;
+    color: #333;
 }
 
 .total {
