Adicion script en carrito para contador de pedidos en pantalla

--- a/app/templates/about_us.html
+++ b/app/templates/about_us.html
@@ -14,7 +14,7 @@
     </header>
     <section class="about-us">
         <h2>Nuestra Historia</h2>
-        <p>Somos una pime que se dedica a hacer hamburguesas personalizadas. Nuestro local se situa en avenida quilin 1254 (direccion ficticia). Puedes hacer tus pedidos online y venir a retirarlos a la direccion.
+        <p>Somos una pyme que se dedica a hacer hamburguesas personalizadas. Nuestro local se situa en avenida quilin 1254 (direccion ficticia). Puedes hacer tus pedidos online y venir a retirarlos a la direccion.
         <h2>Nuestra Misión</h2>
         <p>Nuestra misión es mejorar el servicio mediante una aplicacion web y asi poder trabajar de manera eficiente</p>
 
